alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ hr {
 
 .btn-lg,
 .btn-group-lg > .btn {
-    padding: 7px 28px;
+    padding: 7px 18px;
     font-size: 22px;
 }
 
@@ -213,6 +213,21 @@ hr {
     font-weight: normal;
     font-size: 24px;
 }
+
+@media (max-width:767px) {
+    .masthead {
+        text-align: left;
+    }
+    .masthead .main-title {
+        line-height: 1.2;
+    }
+    .masthead .sub-title {
+        margin-top: 15px;
+        line-height: 1.3;
+    }
+}
+
+
 .masthead a {
     color: #fff;
     text-shadow: 0 0 1px #F75E06;
@@ -436,8 +451,42 @@ h2.section-title,
     margin-bottom: 25px;
 }
 
-.form-group.last {
-    margin-bottom: 0;
+
+.form-group {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 0 10px;
+}
+
+.form-group .email {
+    width: 20em;
+}
+.form-group .btn {
+    margin-left: 15px;
+}
+
+@media (max-width:767px) {
+    .form-group {
+        flex-direction: column;
+        align-items: center;
+    }
+    .subscribe {
+        padding-top: 15px;
+    }
+    .form-group .mc-field-group {
+        flex: 1;
+        width: 95%;
+    }
+    .form-group .email {
+        width: 100%;
+        padding: 10px;
+        margin: 0;
+    }
+    .form-group .btn {
+        margin: 15px 0 0;
+        width: 95%;
+    }
 }
 
 /*Layout 5 Event */
